--- a/register/register.html
+++ b/register/register.html
@@ -4,7 +4,7 @@
     <title>homework for js</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./css.css">
-    <script type="text/javascript" src="./jsByMySelf.js"></script>
+    <script type="text/javascript" src="./JS.js"></script>
   </head>
 
 <body>
